--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,7 +6,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="dev.eakin.blobandroid.ui.main.MainFragment">
+        tools:context="dev.eakin.blob.ui.main.MainFragment">
 
     <TextView
             android:id="@+id/message"
